--- a/oauth2/src/main/resources/application.properties
+++ b/oauth2/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #oauth2
-spring.security.oauth2.client.registration.google.client-id=715957308457-k093p6flpn19g458njocnug9okf319st.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=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
+#spring.security.oauth2.client.registration.google.client-id=715957308457-u15d7goqfnd4h7jvqm5j5g4irin5ie8e.apps.googleusercontent.com
+#spring.security.oauth2.client.registration.google.client-secret=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
+#spring.security.oauth2.client.registration.google.scope=email,profile
 
+#server.port=9090
