--- a/websocket-example/src/main/resources/application.properties
+++ b/websocket-example/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url=jdbc:mysql://localhost/websocket
+spring.datasource.username=rabil
+spring.datasource.password=7lgwLKWWuFu7hUr4
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
