data-jpa postgre

--- a/datajpa-postgreSQL/src/main/resources/application.properties
+++ b/datajpa-postgreSQL/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/datajpa${DB.NAME}
+spring.datasource.url=${DB.NAME}
 spring.datasource.username=${DB.USERNAME}
 spring.datasource.password=${DB.PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
