--- a/datajpa-postgreSQL/src/main/resources/application.properties
+++ b/datajpa-postgreSQL/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=${DB.NAME}
-spring.datasource.username=${DB.USERNAME}
-spring.datasource.password=${DB.PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/datajpa
+spring.datasource.username=postgres
+spring.datasource.password=Rabil123321libaR
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
