--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>oauth2</module>
         <module>kafka-example</module>
         <module>genetate-qr-code</module>
+        <module>elasticsearch</module>
     </modules>
 
     <build>
