--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>kafka-example</module>
         <module>genetate-qr-code</module>
         <module>elasticsearch</module>
+        <module>graphql</module>
     </modules>
 
     <build>
